[package]
name = "animgui"
version = "0.1.0"
authors = ["user <no email given>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.5.0"
imgui-winit-support = "0.5.0"
imgui-glium-renderer = "0.5.0"
glium = "0.27.0"
winit = "0.22.2"
nalgebra-glm = "0.8.0"
obj-rs = "0.6.2"

[profile.release]
lto = true
